k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: trackflow-frontend
spec:
  selector:
    app.kubernetes.io/name: trackflow-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
